# twitter_terminal

./: .env  .env_example  .gitignore  README.md  config.json  cookies.json  main.py  posthandler.py  pyproject.toml
envs/: .env
